--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lotide",
+  "name": "@kinetics11/lotide",
   "version": "1.0.0",
-  "description": "",
-  "main": "assertArraysEqual.js",
+  "description": "A mini clone of the Lodash library created for educational purposes",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/cadenkchoi/Lotide.git"
   },
-  "author": "",
+  "author": "Caden Choi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cadenkchoi/Lotide/issues"
